# rust-app-demo

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  load.py  script.ld  wrapper.h
.cargo/: config
include/: alloca.h  arm_acle.h  arm_cmse.h  arm_compat.h  arm_neon.h  armdsp.h  assert.h  c55x.h  complex.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  rt_fp.h  rt_heap.h  rt_locale.h  rt_locale.s  rt_mem_h.s  rt_memory.s  rt_misc.h  rt_sys.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  uchar.h  wchar.h  wctype.h
include/arm_linux/: arm_neon.h  dspfns.h  float.h  limits.h  limits_rvct.h  linux_armcc.h  linux_rvct.h  stdbool.h  stddef.h
include/libcxx/: __bsd_locale_fallbacks.h  __config  __external_threading  __locale  arm-tpl.h  atomic  cmath  complex  cuchar  cwchar  ios  istream  locale  math.h  ostream  random  stdlib.h  string  utility
nanosdk_1.6/: Makefile.defines
nanosdk_1.6/include/: bagl.h  bolos_version.h  cx.h  cx_compliance_141.h  lcx_aes.h  lcx_blake2.h  lcx_common.h  lcx_crc.h  lcx_des.h  lcx_ecdh.h  lcx_ecdsa.h  lcx_ecfp.h  lcx_ecschnorr.h  lcx_eddsa.h  lcx_groestl.h  lcx_hash.h  lcx_hmac.h  lcx_math.h  lcx_pbkdf2.h  lcx_ripemd160.h  lcx_rng.h  lcx_rsa.h  lcx_sha256.h  lcx_sha3.h  lcx_sha512.h  os.h  os_apilevel.h  os_hal.h  os_io_seproxyhal.h  os_io_usb.h  seproxyhal_protocol.h  syscalls.h
nanosdk_1.6/lib_stusb_impl/: usbd_impl.c
nanosdk_1.6/src/: os_io_seproxyhal.c
src/: bagls.rs  bindings.rs  io.rs  main.rs  ui.rs
test/: test_cmds.py
(+34 files in other folders)
