[package]
name = "rust-app-demo"
version = "0.1.0"
authors = ["yhql"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
cty = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 's' 
lto = true